--- a/main.html
+++ b/main.html
@@ -1,16 +1,101 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dog Adoption Application</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 500px;
+      margin: 20px auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    input[type="text"],
+    input[type="tel"],
+    select,
+    button {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+    input[type="checkbox"] {
+      margin-right: 5px;
+      vertical-align: middle;
+    }
+
+    button {
+      background-color: #3498DB;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <div class="container">
+    <h2>Dog Adoption Application</h2>
+    <form action="/submit" method="POST" id="dogAdoptionForm">
+      <div>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Name" required>
+      </div>
+      <div>
+        <label for="phone">Phone Number</label>
+        <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+      </div>
+      <div>
+        <label for="address">Address</label>
+        <input type="text" id="address" name="address" placeholder="Address" required>
+      </div>
+      <div>
+        <label>Have you ever lived with a Dog before?</label>
+        <input type="checkbox" id="checkbox" name="dogExperience" value="Have you ever lived with a Dog before?" required>
+      </div>
+      <div>
+        <label for="breeds">Please select your preferred breeds</label>
+        <select id="multiSelect" name="breeds[]" multiple required>
+			 <option value="Labrador Retriever">Labrador</option>
+          <option value="Golden Retriever">Golden</option>
+			 <option value="Bulldog">Bulldog</option>
+          <option value="German Shepherd">German Shepherd</option>
+          <option value="Beagle">Beagle</option>
+        </select>
+      </div>
+      <button type="submit">Submit</button>
+    </form>
+  </div>
 </body>
 
 </html>
