--- a/main.html
+++ b/main.html
@@ -93,7 +93,7 @@
           <option value="Beagle">Beagle</option>
         </select>
       </div>
-      <button type="submit">Submit</button>
+      <button type="submit" value="Submit">Submit</button>
     </form>
   </div>
 </body>
