--- a/main.html
+++ b/main.html
@@ -52,6 +52,7 @@
 
     button {
       background-color: #3498DB;
+		
       color: #fff;
       border: none;
       cursor: pointer;
@@ -93,7 +94,7 @@
           <option value="Beagle">Beagle</option>
         </select>
       </div>
-      <button type="submit" id="submit" value="Submit">Submit</button>
+      <input type="submit" id="submit" value="Submit">
     </form>
   </div>
 </body>
